Prevent odd formatting jumps in table of contents when doing multiple layers

--- a/static/css/stringprint-core.css
+++ b/static/css/stringprint-core.css
@@ -303,6 +303,11 @@ display:none
     padding-bottom:40px;
 }
 
+li>ul{
+margin-top:0px;
+margin-bottom:0px;
+}
+
 
 .dont-break-out {
 
